[tool.poetry]
name = 'adcircpy'
version = '0.0.0'
description = 'Python package for working with ADCIRC input and output files'
authors = ['Zach Burnett <zachary.burnett@noaa.gov>', 'Jaime R Calzada <jreniel@gmail.com>']
license = 'GPL-3.0-or-later'
readme = 'README.md'
repository = 'https://github.com/noaa-ocs-modeling/adcircpy.git'
documentation = 'https://adcircpy.readthedocs.io'

[build-system]
requires = [
    'poetry-core>=1.0.0',
    'poetry-dynamic-versioning',
]
build-backend = 'poetry.core.masonry.api'

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = '^3.8'
appdirs = '*'
geopandas = '<0.11'
haversine = '*'
matplotlib = '*'
netCDF4 = '<1.6'
numpy = '*'
pandas = '*'
paramiko = '*'
pooch = '*'
psutil = '*'
pyproj = '>=2.6'
requests = '*'
scipy = '*'
searvey = '*'
shapely = '*'
stormevents = '>=2.1.3' # tests rely on new field widths
typepigeon = '<2' # newer versions require code update
utm = '*'
isort = { version = '*', optional = true }
oitnb = { version = '*', optional = true }
pytest = { version = '*', optional = true }
pytest-cov = { version = '*', optional = true }
pytest-mock = { version = '*', optional = true }
pytest-socket = { version = '*', optional = true }
pytest-xdist = { version = '*', optional = true }
m2r2 = { version = '*', optional = true }
sphinx = { version = '*', optional = true }
sphinx-rtd-theme = { version = '*', optional = true }
sphinxcontrib-programoutput = { version = '*', optional = true }
sphinxcontrib-bibtex = { version = '*', optional = true }

[tool.poetry.extras]
testing = ['pytest', 'pytest-cov', 'pytest-mock', 'pytest-socket', 'pytest-xdist']
development = ['isort', 'oitnb']
documentation = ['m2r2', 'sphinx', 'sphinx-rtd-theme', 'sphinxcontrib-programoutput', 'sphinxcontrib-bibtex']

[tool.poetry.scripts]
tidal_run = 'adcircpy.cmd.tidal_run:main'
best_track_run = 'adcircpy.cmd.best_track_run:main'
best_track_file = 'adcircpy.cmd.best_track_file:main'
plot_mesh = 'adcircpy.cmd.plot_mesh:main'
plot_maxele = 'adcircpy.cmd.plot_maxele:main'
plot_fort61 = 'adcircpy.cmd.plot_fort61:main'
fort63 = 'adcircpy.cmd.fort63:main'
tide_gen = 'adcircpy.cmd.tide_gen:main'
