[metadata]
name = adcircpy
lead_developer = Zachary Burnett
author = Jaime R Calzada, Zachary Burnett
author_email = jreniel@gmail.com, zachary.burnett@noaa.gov
description = Python package for working with ADCIRC input and output files.
long_description = file: README.md
license = GPL
url = https://github.com/jreniel/adcircpy.git

[nosetests]
exe = True
tests = tests/
