[metadata]
name = adcircpy
author = Zach Burnett <zachary.burnett@noaa.gov>, Jaime R Calzada <jreniel@gmail.com>
description = Python package for working with ADCIRC input and output files
long_description = file:README.md
long_description_content_type = text/markdown
license = GPL
python_requires = >=3.6
url = https://github.com/noaa-ocs-modeling/adcircpy.git

[options]
install_requires =
    appdirs
    geopandas
    haversine
    matplotlib
    netCDF4
    numpy
    pandas
    paramiko
    psutil
    pyproj >= 2.6
    requests
    scipy
    shapely
    stormevents >= 1.3.0
    utm

[options.extras_require]
testing =
    pooch
    pytest
    pytest-cov
    pytest-mock
    pytest-socket
    pytest-xdist
development =
    flake8
    isort
    oitnb
documentation =
    m2r2
    sphinx
    sphinx-rtd-theme
    sphinxcontrib-programoutput
    sphinxcontrib-bibtex

[options.entry_points]
console_scripts =
    tidal_run = adcircpy.cmd.tidal_run:main
    best_track_run = adcircpy.cmd.best_track_run:main
    best_track_file = adcircpy.cmd.best_track_file:main
    plot_mesh = adcircpy.cmd.plot_mesh:main
    plot_maxele = adcircpy.cmd.plot_maxele:main
    plot_fort61 = adcircpy.cmd.plot_fort61:main
    fort63 = adcircpy.cmd.fort63:main
    tide_gen = adcircpy.cmd.tide_gen:main
